Training and inference

--- a/cnn_approach.ipynb
+++ b/cnn_approach.ipynb
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 3, 375, 500]) torch.Size([1, 3, 375, 500]) ('2009_000991.jpg',)\n"
+      "torch.Size([1, 3, 375, 500]) torch.Size([1, 1, 375, 500]) ('2009_002082.jpg',)\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
        "    (5): ReLU()\n",
        "    (6): Conv2d(512, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (7): ReLU()\n",
-       "    (8): Conv2d(128, 3, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (8): Conv2d(128, 1, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
        "    (9): ReLU()\n",
        "  )\n",
        ")"
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "767f7a02",
    "metadata": {},
    "outputs": [
@@ -186,25 +186,87 @@
      "output_type": "stream",
      "text": [
       "Training started...\n",
-      "Epoch 0: Started training\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining started...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m trainer_evaluator\u001b[38;5;241m.\u001b[39mtrain_cnn(model, train_loader, optimizer, loss, device, \u001b[38;5;241m5\u001b[39m)\n",
-      "File \u001b[0;32m~/Documents/MS/Saarland_University/Semester_1/ML/Project/trainer_evaluator.py:54\u001b[0m, in \u001b[0;36mTRAINER_EVALUATOR.train_cnn\u001b[0;34m(self, model, dataloader, optimizer, criterion, device, epochs, log_file, best_model_dir)\u001b[0m\n\u001b[1;32m     51\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     52\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m---> 54\u001b[0m     total_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m loss\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m#     # ----------------------\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;66;03m#     # Save predictions for this batch\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;66;03m#     # ----------------------\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     76\u001b[0m \n\u001b[1;32m     77\u001b[0m \u001b[38;5;66;03m# model.train()\u001b[39;00m\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal loss after epoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal_loss\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch 0: Started training\n",
+      "Total loss after epoch 0: 695.8074588477612\n",
+      "Epoch 1/25 - Loss: 3.0518\n",
+      "Epoch 1: Started training\n",
+      "Total loss after epoch 1: 695.80745883286\n",
+      "Epoch 2/25 - Loss: 3.0518\n",
+      "Epoch 2: Started training\n",
+      "Total loss after epoch 2: 695.80745883286\n",
+      "Epoch 3/25 - Loss: 3.0518\n",
+      "Epoch 3: Started training\n",
+      "Total loss after epoch 3: 695.80745883286\n",
+      "Epoch 4/25 - Loss: 3.0518\n",
+      "Epoch 4: Started training\n",
+      "Total loss after epoch 4: 695.80745883286\n",
+      "Epoch 5/25 - Loss: 3.0518\n",
+      "Epoch 5: Started training\n",
+      "Total loss after epoch 5: 695.80745883286\n",
+      "Epoch 6/25 - Loss: 3.0518\n",
+      "Epoch 6: Started training\n",
+      "Total loss after epoch 6: 695.80745883286\n",
+      "Epoch 7/25 - Loss: 3.0518\n",
+      "Epoch 7: Started training\n",
+      "Total loss after epoch 7: 695.80745883286\n",
+      "Epoch 8/25 - Loss: 3.0518\n",
+      "Epoch 8: Started training\n",
+      "Total loss after epoch 8: 695.80745883286\n",
+      "Epoch 9/25 - Loss: 3.0518\n",
+      "Epoch 9: Started training\n",
+      "Total loss after epoch 9: 695.80745883286\n",
+      "Epoch 10/25 - Loss: 3.0518\n",
+      "Epoch 10: Started training\n",
+      "Total loss after epoch 10: 695.80745883286\n",
+      "Epoch 11/25 - Loss: 3.0518\n",
+      "Epoch 11: Started training\n",
+      "Total loss after epoch 11: 695.80745883286\n",
+      "Epoch 12/25 - Loss: 3.0518\n",
+      "Epoch 12: Started training\n",
+      "Total loss after epoch 12: 695.80745883286\n",
+      "Epoch 13/25 - Loss: 3.0518\n",
+      "Epoch 13: Started training\n",
+      "Total loss after epoch 13: 695.80745883286\n",
+      "Epoch 14/25 - Loss: 3.0518\n",
+      "Epoch 14: Started training\n",
+      "Total loss after epoch 14: 695.80745883286\n",
+      "Epoch 15/25 - Loss: 3.0518\n",
+      "Epoch 15: Started training\n",
+      "Total loss after epoch 15: 695.80745883286\n",
+      "Epoch 16/25 - Loss: 3.0518\n",
+      "Epoch 16: Started training\n",
+      "Total loss after epoch 16: 695.80745883286\n",
+      "Epoch 17/25 - Loss: 3.0518\n",
+      "Epoch 17: Started training\n",
+      "Total loss after epoch 17: 695.80745883286\n",
+      "Epoch 18/25 - Loss: 3.0518\n",
+      "Epoch 18: Started training\n",
+      "Total loss after epoch 18: 695.80745883286\n",
+      "Epoch 19/25 - Loss: 3.0518\n",
+      "Epoch 19: Started training\n",
+      "Total loss after epoch 19: 695.80745883286\n",
+      "Epoch 20/25 - Loss: 3.0518\n",
+      "Epoch 20: Started training\n",
+      "Total loss after epoch 20: 695.80745883286\n",
+      "Epoch 21/25 - Loss: 3.0518\n",
+      "Epoch 21: Started training\n",
+      "Total loss after epoch 21: 695.80745883286\n",
+      "Epoch 22/25 - Loss: 3.0518\n",
+      "Epoch 22: Started training\n",
+      "Total loss after epoch 22: 695.80745883286\n",
+      "Epoch 23/25 - Loss: 3.0518\n",
+      "Epoch 23: Started training\n",
+      "Total loss after epoch 23: 695.80745883286\n",
+      "Epoch 24/25 - Loss: 3.0518\n",
+      "Epoch 24: Started training\n",
+      "Total loss after epoch 24: 695.80745883286\n",
+      "Epoch 25/25 - Loss: 3.0518\n"
      ]
     }
    ],
    "source": [
     "print(\"Training started...\")\n",
-    "trainer_evaluator.train_cnn(model, train_loader, optimizer, loss, device, 5)"
+    "trainer_evaluator.train_cnn(model, train_loader, optimizer, loss, device, 25)"
    ]
   },
   {
@@ -230,25 +292,15 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 3, 375, 500])\n",
-      "preds: torch.Size([1, 3, 375, 500])\n",
-      "mask: (3, 375, 500)\n",
-      "rgb_mask: (3, 375, 3)\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 3-dimensional, but 4 were indexed",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Save predicted masks\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m trainer_evaluator\u001b[38;5;241m.\u001b[39msave_predictions(model, train_loader, device)\n",
-      "File \u001b[0;32m~/Documents/MS/Saarland_University/Semester_1/ML/Project/trainer_evaluator.py:134\u001b[0m, in \u001b[0;36mTRAINER_EVALUATOR.save_predictions\u001b[0;34m(self, model, loader, device, save_dir)\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrgb_mask: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrgb_mask\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    133\u001b[0m Image\u001b[38;5;241m.\u001b[39m_show(Image\u001b[38;5;241m.\u001b[39mfromarray(rgb_mask))\n\u001b[0;32m--> 134\u001b[0m rgb_mask[mask \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m255\u001b[39m, \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m255\u001b[39m  \u001b[38;5;66;03m# red channel\u001b[39;00m\n\u001b[1;32m    135\u001b[0m rgb_mask[mask \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m255\u001b[39m, \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m    \u001b[38;5;66;03m# green channel\u001b[39;00m\n\u001b[1;32m    136\u001b[0m rgb_mask[mask \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m255\u001b[39m, \u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m    \u001b[38;5;66;03m# blue channel\u001b[39;00m\n",
-      "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 3-dimensional, but 4 were indexed"
+      "File \u001b[0;32m~/Documents/MS/Saarland_University/Semester_1/ML/Project/trainer_evaluator.py:122\u001b[0m, in \u001b[0;36mTRAINER_EVALUATOR.save_predictions\u001b[0;34m(self, model, loader, device, save_dir)\u001b[0m\n\u001b[1;32m    119\u001b[0m preds \u001b[38;5;241m=\u001b[39m (outputs \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m)\u001b[38;5;241m.\u001b[39mfloat()\n\u001b[1;32m    121\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(images\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m)):\n\u001b[0;32m--> 122\u001b[0m     mask \u001b[38;5;241m=\u001b[39m preds[i]\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy()\n\u001b[1;32m    123\u001b[0m     mask \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqueeze(mask)\n\u001b[1;32m    124\u001b[0m     mask \u001b[38;5;241m=\u001b[39m mask\u001b[38;5;241m.\u001b[39mastype(np\u001b[38;5;241m.\u001b[39muint8) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
